tests/baselines/reference/for-of48.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of48.ts(4,12): error TS1005: ':' expected.


==== tests/cases/conformance/es6/for-ofStatements/for-of48.ts (1 errors) ====
    var x: string, y: number;
    var array = [{ x: "", y: true }]
    enum E { x }
    for ({x, y = E.x} of array) {
               ~
!!! error TS1005: ':' expected.
        x;
        y;
    }